xubuntu-fourteen/style.css
/*
 *  Theme Name: Xubuntu Fourteen
 *  Description: A theme built for the Xubuntu website. Features multiple widget areas in the frontpage.
 *  Author: Pasi Lallinaho
 *  Version: 02.14
 *  Author URI: http://open.knome.fi/
 *  Theme URI: https://xubuntu.org/
 *
 */

html {
	background: #0b3a6b url(images/pagebg.png) 50% -25px repeat;
}

body {
	padding: 2em 0 3em 0;

	font-size: small;
	font-family: "Open Sans", sans-serif;
	line-height: 1.5em;

	background: transparent url(images/bodybg.png) 0 0 repeat-x;
	color: #3c3c3c;
	border-top: 4px solid #2c82dd;
	border-top: 4px solid rgba( 44, 130, 221, 0.75 );

	min-height: 760px;
}

/*  Site width
 *
 */

#wpcontent, #header, #wpfooter {
	width: 90%;
	margin: 0 auto;

	min-width: 960px;
	max-width: 1200px;
	clear: both;
}

/*  Basic layouting
 *
 */

#header { height: 75px; }

#logo {
	float: left;
	margin-left: 35px;
}

#wpcontent {
	font-size: 110%;
	background: #f1f1f1 url(images/contentbg.png) 0 0 repeat-x;

	border-radius: 7px;
	padding-bottom: 25px;
}
	body.home #wpcontent { background-image: url(images/contentbg-front.png); }

#mainwrap {
	padding: 25px 35px;
	float: left;
}
	body.home #mainwrap { padding-top: 0; }

#main { margin-right: 295px; }
	body.home #main { margin-right: 545px; }

#sidebar {
	float: right;
	width: 210px;
	margin: 2em 0 2em -260px;

	vertical-align: top;
}
	#sidebar.sidebar-main {
		padding: 25px;
		background-color: #f8f8f8;
		background-color: rgba( 255, 255, 255, 0.7 );
		border-top-left-radius: 14px;
		border-bottom-left-radius: 14px;
	}
	#sidebar.sidebar-front {
		width: 510px;
		margin: 0 0 2em -560px;
	}

#wpfooter {
	padding: 2px;
	font-size: 90%;
	color: #aaa;
}
	#wpfooter .widgets div {
		margin: 0 35px;
	}

/*  Selection style
 *
 */

::selection {
	background-color: #398ee7;
	color: #fff;
}

/*  Element styles
 *
 */

p, ol, ul, dl, blockquote, pre, table {
	margin-bottom: 1em;
	font-size: 90%;
}

a {
	text-decoration: none;
	color: #2c82dd;
	border-bottom: 1px solid transparent;
	transition: all 0.3s ease-in-out;
}
	a:hover,
	a:active,
	a:focus {
		color: #13385e;
		border-bottom: 1px solid #3c3c3c;
	}
	#logo a { border-bottom: none; }
	#sidebar a { color: #444; }
	#wpfooter a { color: #eee; }
		#wpfooter a:hover,
		#wpfooter a:active,
		#wpfooter a:focus { border-bottom: 1px solid #fff; }

h1, h2, h3, h4, h5, h6 {
	font-weight: normal;
	text-align: left;
	margin: 1.3em 0 0.6em 0;
	line-height: 1.4em;
}

h1 {
	margin-top: 0;
	margin-bottom: 0.5em;
	font-weight: 600;
	font-size: 200%;
	line-height: 1.3em;

	color: #1c50a1;
}
	h1.post-title { margin-bottom: 0; }
	h1.post-title a { border-bottom: none; color: #1c50a1; }
	body.home h1 {
		font-weight: normal;
		width: 95%;
		margin: 1em 3em 1em -35px;
		padding: 1em 10% 1em 35px;

		background-color: #efefef;
		background: rgba( 255, 255, 255, 0.5 ) url(images/headerbg.png) 0 0 repeat-x;

		border-top-right-radius: 14px;
		border-bottom-right-radius: 14px;

		border-bottom: 3px solid #bed8f3;
		border-bottom: 3px solid rgba( 57, 142, 231, 0.3 );
	}
	body.archive h1.post-title { margin-bottom: 0.5em; }

h2 { font-size: 170%; }
h3 { font-size: 140%; color: #444; }
h4 { font-size: 130%; color: #555; }
h5 { font-size: 120%; color: #888; }
h6 { font-size: 105%; color: #aaa; }

hr {
	margin: 1em 0;
	border-bottom: 1px solid #dadada;
}

li { list-style-position: inside; }
	#mainwrap li { margin-bottom: 0.2em; list-style-position: outside; margin-left: 1.2em; }
	#mainwrap ul li { list-style-type: disc; }
	#mainwrap ol li { list-style-type: decimal; margin-left: 1.6em; }
	#archive-posts ul li { list-style-type: none; margin-left: 0; }
	#archive-posts ul li span.post-time { display: inline-block; width: 20%; margin-right: 5px; }

p { }
	body.home p { font-size: 105%; line-height: 1.4em; font-family: "Open Sans"; }


/*  Photoslider styling
 *
 */

body.home .ps_wrap {
	margin-top: 30px;
}

.ps_wrap img {
	border-radius: 14px;
}

.photoslider.ctrl-ontop .c-prev,
.photoslider.ctrl-ontop .c-next {
	height: 25px !important;
	width: 25px;

	top: 0 !important;

	display: block;
	opacity: 0;

	background-color: #fff;
	background-color: rgba(255, 255, 255, 0.9) !important;
	color: #1c50a1 !important;

	border-bottom: 3px solid #bed8f3;
	border-bottom: 3px solid rgba( 57, 142, 231, 0.3 );

	font-weight: normal !important;

	border-radius: 0;
	border-bottom-left-radius: 7px;
	border-bottom-right-radius: 7px;

	transition: all 0.3s ease-in-out;
}

.photoslider.ctrl-ontop:hover .c-prev,
.photoslider.ctrl-ontop:hover .c-next {
	opacity: 1;
}

.photoslider .captions {
	margin: -4em 0 1em 0;
	padding-top: 4em !important;

	background-color: #e5e5e5;
	background-color: rgba( 0, 0, 0, 0.05 );
	color: #2e2e2e !important;
	color: rgba( 0, 0, 0, 0.8 ) !important;

	border-radius: 14px;
	padding: 0.5em 0.8em;

	font-size: 115%;
	font-style: normal !important;
}
	.photoslider .caption-title {
		font-weight: 700;
		margin-bottom: 0.2em;
	}
	.photoslider .caption-content {
		margin-bottom: 0.2em;
	}


/*  Specific styles
 *  TODO: Do we need these?
 *
 */

table {
	width: 100%;
}
table td {
	border: 1px solid #ccc;
	background-color: #f6f6f6;
	padding: 3px;
}
table th {
	text-align: left;
}

/*  Post styles
 *
 */

.post-post {
	color: #333;
	margin: 1.5em 0;
}

.post-meta, .post-meta a {
	color: #ccc;
	color: rgba(0,0,0,.2);
}

.post-meta span a {
	transition: all 0.5s ease-in-out;
}
.post-meta span a:hover,
.post-meta span a:focus {
	color: #808080;
	color: rgba(0,0,0,.5);
}


/*  Navigation styles
 *
 */

#horizontal_navi {
	clear: both;
	border-top: 1px solid #ccc;
	margin: 0 35px;
	padding-top: 1em;
}

/*  Make clickable area of links bigger  */
#horizontal_navi ul.menu a,
#sidebar ul.menu a { display: block; width: 90%; }

/* Sub-menu items should be normal size */
#horizontal_navi ul.menu .sub-menu,
#sidebar ul.menu .sub-menu { font-size: 100%; }

/* Float the sections on the frontpage and on the bottom navigation template */
#horizontal_navi ul.menu .menu-item-has-children {
	float: left;
	width: 20%;
}

/* Style the top level navigation links; bigger size, no color or "underline" */
#horizontal_navi ul.menu .menu-item-has-children > a,
#sidebar ul.menu .menu-item-has-children > a {
	font-size: 125%;
	color: #333;
	border-bottom: none;
}

/* Add some padding before and after the sub-menus */
#horizontal_navi ul.menu .menu-item-has-children ul,
#sidebar ul.menu .menu-item-has-children ul { margin: 0.5em 0 1.5em 0; }

/* Specific classes for menu for manual use */
ul.menu li.strong { font-weight: 700; }
ul.menu li.external { background: transparent url(images/external.png) 88% 50% no-repeat; }
ul.menu li.external:hover { background-image: url(images/external-hover.png); }

/* Only show selected page with blue color in the sidebar submenu */
#sidebar .sub-menu .current-menu-item a { color: #2c82dd !important; }


/*  Blog browsing
 *
 */

body.archive #main {
	width: 90%;
}

#browse {
	width: 100%;
	border-top: 1px solid #dadada;
	margin-top: 2em;
}

#browse .left-column {
	float: left;
	width: 48%;
	margin-right: 4%;
}

#browse .right-column {
	float: right;
	width: 48%;
}

#browse h4 { margin-top: 0.5em; }
#browse li { list-style-type: none !important; margin-left: 0; }
#browse li a { display: block; width: 90%; }
#browse .more-link a { margin-top: 0.5em; color: #777; font-size: 95%; font-weight: bold; }
#browse .tags li { display: inline; margin-right: 1em; }
#browse .tags li a { display: inline-block; width: auto; }
#browse hr { clear: both; }

